Switch slide scroll bug corrected and forms remove - using round instead of floor or ceil when determining the slide from the scrolling - showing the thanks page after subscribe directly instead of the form - showing the number of subscribe button header on mobile version - changing shade of number counter of the form

--- a/landing/src/style/landing-mobile.css
+++ b/landing/src/style/landing-mobile.css
@@ -7,10 +7,13 @@
     right: 8px;
 }
 
-#header-buttons ._btt:first-child{
-    visibility: hidden;
+.not_sub #header-buttons ._btt:first-child{
+    display: none;
 }
 
+.alrd_sub #header-buttons ._btt:last-child{
+    display: none;
+}
 ._btt{
     margin: 0px;
     font-size: 14px;
